<resources>
    <string name="app_name">My Calculator</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="divide">/</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="plus">+</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="multiply">*</string>
    <string name="num_zero">0</string>
    <string name="clr">CLR</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="num_decimal">.</string>
</resources>